education/educationapp/force-app/main/default/objects/edu_disciplina__c/edu_disciplina__c.object-meta.xml
<CustomObject>
    <label>Disciplina</label>
    <nameField>
        <label>Nome da Disciplina</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disciplinas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>