education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_alunodisc__c.field-meta.xml
<CustomField>
    <fullName>edu_alunodisc__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Aluno matriculado nesta disciplina.</inlineHelpText>
    <label>Aluno</label>
    <referenceTo>edu_aluno__c</referenceTo>
    <relationshipLabel>Alunos Matriculados</relationshipLabel>
    <relationshipName>edu_alunodisc</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>