education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_cargahoraria__c.field-meta.xml
<CustomField>
    <fullName>edu_cargahoraria__c</fullName>
    <inlineHelpText>Carga horária da disciplina, que compõe a carga horária total do curso.</inlineHelpText>
    <label>Carga Horária</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>