education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_codigodocurso__c.field-meta.xml
<CustomField>
    <fullName>edu_codigodocurso__c</fullName>
    <inlineHelpText>Código da disciplina informado pela instituição de ensino, na grade curricular, ou histórico do curso. Caso não possua, preencher o campo replicando o ID do Curso. (Exemplo: DC-0001).</inlineHelpText>
    <label>Código da Disciplina</label>
    <length>255</length>
    <type>Text</type>
</CustomField>