education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_dependencia__c.field-meta.xml
<CustomField>
    <fullName>edu_dependencia__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Caso essa disciplina esteja sendo cursada na modalidade de dependência devido a reprovação, clonar a disciplina reprovada e selecionar este campo.</inlineHelpText>
    <label>Dependência</label>
    <type>Checkbox</type>
</CustomField>