education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_discurso__c.field-meta.xml
<CustomField>
    <fullName>edu_discurso__c</fullName>
    <label>Curso da Disciplina</label>
    <referenceTo>edu_curso__c</referenceTo>
    <relationshipLabel>Disciplinas do Curso</relationshipLabel>
    <relationshipName>edu_discurso</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>