education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_instituicaodeensino__c.field-meta.xml
<CustomField>
    <fullName>edu_instituicaodeensino__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Instituição de ensino que oferece o curso desta disciplina.</inlineHelpText>
    <label>Instituição de Ensino</label>
    <referenceTo>edu_instituicaodeensino__c</referenceTo>
    <relationshipLabel>Instituição de Ensino</relationshipLabel>
    <relationshipName>edu_instituicaodiscensino</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>