education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_mediaaprovacao__c.field-meta.xml
<CustomField>
    <fullName>edu_mediaaprovacao__c</fullName>
    <inlineHelpText>Informar qual a média de aprovação da disciplina ou do curso estipulado pela instituição de ensino ou MEC.</inlineHelpText>
    <label>Média para Aprovação</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>