education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_notafinal__c.field-meta.xml
<CustomField>
    <fullName>edu_notafinal__c</fullName>
    <formula>edu_primeiraavaliacao__c +  edu_segundaavaliacao__c +  edu_terceiraavaliacao__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Soma de todas as avaliações realizadas.</inlineHelpText>
    <label>Nota Final</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>