education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_primeiraavaliacao__c.field-meta.xml
<CustomField>
    <fullName>edu_primeiraavaliacao__c</fullName>
    <inlineHelpText>Nota obtida na primeira avaliação, em formato de número, separado por ponto. (Exemplo: 9.5)
Caso a nota seja disponibilizada em forma de porcentagem, verificar as regras de avaliação da nota (Exemplo: nota obtida equivale a 100%, porem esse valor é multiplicado por 0,6, logo a nota final será 6.0).</inlineHelpText>
    <label>Primeira Avaliação</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>