education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_status__c.field-meta.xml
<CustomField>
    <fullName>edu_status__c</fullName>
    <formula>IF( edu_primeiraavaliacao__c =0,&quot;Pendente&quot;,(IF( edu_notafinal__c &gt;=  edu_mediaaprovacao__c, &quot;Aprovado&quot;,&quot;Reprovado&quot;)))</formula>
    <inlineHelpText>Caso a nota final seja igual ou superior a nota média para aprovação na disciplina, será considerado como Aprovado, caso contrário, terá o status Reprovado.</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>