education/educationapp/force-app/main/default/objects/edu_disciplina__c/fields/edu_terceiraavaliacao__c.field-meta.xml
<CustomField>
    <fullName>edu_terceiraavaliacao__c</fullName>
    <inlineHelpText>Nota obtida na terceira avaliação, em formato de número, separado por ponto. (Exemplo: 9.5)
Caso a nota seja disponibilizada em forma de porcentagem, verificar as regras de avaliação da nota (Exemplo: nota obtida equivale a 100%, porem esse valor é multiplicado por 0,2, logo a nota final será 2.0).
Caso a instituição não possua uma terceira avaliação, preencher com zero.</inlineHelpText>
    <label>Terceira Avaliação</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>